Se configura para el funcionamiento backend

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@
 # Para Android Emulator usar: http://10.0.2.2:4000/api
 # Para iOS Simulator usar: http://localhost:4000/api
 # Para dispositivo físico usar: http://TU_IP_LOCAL:4000/api
-API_URL=http://192.168.1.74:4000/api
+API_URL=https://ventaveloz-backend.onrender.com/api
