--- a/app.json
+++ b/app.json
@@ -18,9 +18,10 @@
     "android": {
       "package": "com.ventaveloz.app",
       "permissions": [
-        "CAMERA",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
       ]
     },
     "plugins": [
@@ -31,6 +32,11 @@
           "cameraPermission": "VentaVeloz necesita acceso a tu cámara para tomar fotos de productos"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "11a85879-598b-4ca4-b486-39e6beb4dcaa"
+      }
+    }
   }
 }
